--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ joblib==1.3.2
 jsonpickle==3.0.2
 kiwisolver==1.4.5
 matplotlib==3.7.2
-more-itertools==10.1.0
+more-itertools==10.1.0git
 music21==8.3.0
 numpy==1.25.2
 packaging==23.1
