--- a/frontend_server/package.json
+++ b/frontend_server/package.json
@@ -13,6 +13,8 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "populate-env": "^2.0.0",
     "three": "^0.147.0"
   }
 }
