--- a/frontend_server/package.json
+++ b/frontend_server/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "knex": "^2.5.1",
     "populate-env": "^2.0.0",
     "three": "^0.147.0"
   }
