--- a/node_server/package.json
+++ b/node_server/package.json
@@ -36,6 +36,7 @@
     "http-status": "^1.6.2",
     "knex": "^2.5.1",
     "listening-on": "^2.0.9",
-    "populate-env": "^2.0.0"
+    "populate-env": "^2.0.0",
+    "three": "^0.147.0"
   }
 }
