--- a/node_server/package.json
+++ b/node_server/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "tsc --noEmit",
     "build": "tsc -p .",
-    "start": "ts-node-dev server.ts"
+    "start": "ts-node-dev server.ts",
+    "db": "run-s db:update db:plan db:update",
+    "db:plan": "auto-migrate pg < erd.txt",
+    "db:update": "knex migrate:latest && erd-to-types < erd.txt > types.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +23,11 @@
     "@types/node": "^20.6.0",
     "gen-env": "^1.0.1",
     "psql-shell": "^1.2.1",
-    "quick-erd": "^4.10.0",
+    "quick-erd": "^4.11.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
