--- a/node_server/package.json
+++ b/node_server/package.json
@@ -27,7 +27,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "three": "^0.147.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -40,7 +41,6 @@
     "http-status": "^1.6.2",
     "knex": "^2.5.1",
     "listening-on": "^2.0.9",
-    "populate-env": "^2.0.0",
-    "three": "^0.147.0"
+    "populate-env": "^2.0.0"
   }
 }
